--- a/index.html
+++ b/index.html
@@ -4,6 +4,79 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Web Developer Portfolio</title>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+			rel="stylesheet"
+		/>
+		<link rel="stylesheet" href="./styles/style.css" />
 	</head>
-	<body></body>
+	<body class="open-sans-normal">
+		<header class="bg-secondary">
+			<nav>
+				<h3 class="nav-title">
+					Ma<span class="text-primary">r</span>y
+				</h3>
+				<ul>
+					<li><a class="text-white-2" href="">Blog</a></li>
+					<li><a class="text-white-2" href="">Portfolio</a></li>
+					<li>
+						<a class="text-white-2" href=""
+							><button class="btn-primary">Hire Me</button></a
+						>
+					</li>
+				</ul>
+			</nav>
+
+			<div class="banner">
+				<div class="banner-content">
+					<h4 class="banner-greetings text-white-2">Hi, I am</h4>
+					<h1 class="banner-title">Mary</h1>
+					<p class="banner-description text-white-3">
+						Shot what able cold new see hold.Friendly as an betrayed
+						formerly he. Morning because as to society behaved
+						moments.
+					</p>
+					<button class="btn-primary">Download CV</button>
+					<button class="btn-primary">Contact</button>
+				</div>
+				<div class="banner-img">
+					<img src="./assets/images/hardy.png" alt="hardy bhai" />
+				</div>
+			</div>
+		</header>
+
+		<main>
+			<section id="about" class="bg-secondary">
+				<h3 class="section-title">About Me</h3>
+				<p class="section-description text-white-3">
+					I, m a designer & developer with a passion for web design. I
+					enjoy developing simple, clean and slick websites that
+					provide real value to the end user. Thousands of clients
+					have procured exceptional resulfs while working with me.
+					Delivering work within time and budget which meets clients
+					requirements in our mata.
+				</p>
+				<div class="about-item-list">
+					<div class="about-item">
+						<h6 class="item-label text-white-3">Name</h6>
+						<p class="item-value text-white-2">Mary Hardy</p>
+					</div>
+					<div class="about-item">
+						<h6 class="item-label text-white-3">Email</h6>
+						<p class="item-value text-white-2">email58@gmail.com</p>
+					</div>
+					<div class="about-item">
+						<h6 class="item-label text-white-3">Date of Birth</h6>
+						<p class="item-value text-white-2">20 May 2000</p>
+					</div>
+					<div class="about-item">
+						<h6 class="item-label text-white-3">From</h6>
+						<p class="item-value text-white-2">Los Angeles</p>
+					</div>
+				</div>
+			</section>
+		</main>
+	</body>
 </html>
