--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			<div class="banner">
 				<div class="banner-content">
 					<h4 class="banner-greetings text-white-2">Hi, I am</h4>
-					<h1 class="banner-title">Mary</h1>
+					<h1 class="banner-title">Mary Hardy</h1>
 					<p class="banner-description text-white-3">
 						Shot what able cold new see hold.Friendly as an betrayed
 						formerly he. Morning because as to society behaved
@@ -60,23 +60,254 @@
 				</p>
 				<div class="about-item-list">
 					<div class="about-item">
-						<h6 class="item-label text-white-3">Name</h6>
+						<h6 class="item-label text-white-3">Name:</h6>
 						<p class="item-value text-white-2">Mary Hardy</p>
 					</div>
 					<div class="about-item">
-						<h6 class="item-label text-white-3">Email</h6>
+						<h6 class="item-label text-white-3">Email:</h6>
 						<p class="item-value text-white-2">email58@gmail.com</p>
 					</div>
 					<div class="about-item">
-						<h6 class="item-label text-white-3">Date of Birth</h6>
+						<h6 class="item-label text-white-3">Date of Birth:</h6>
 						<p class="item-value text-white-2">20 May 2000</p>
 					</div>
 					<div class="about-item">
-						<h6 class="item-label text-white-3">From</h6>
+						<h6 class="item-label text-white-3">From:</h6>
 						<p class="item-value text-white-2">Los Angeles</p>
 					</div>
 				</div>
 			</section>
+
+			<section id="skills">
+				<h3 class="section-title">What I Do</h3>
+				<p class="section-description">
+					I have more than 10 years experience building software for
+					clients all over the world. Below is a quick overview of my
+					main technical skill sets and technologies i use. Want to
+					find out more about my experience? Check out my online
+					resume and project portfolio.
+				</p>
+				<div class="skill-list">
+					<div class="skill-item">
+						<img
+							class="skill-item-icon"
+							src="/assets/images/icons/js.png"
+							alt="javascript logo"
+						/>
+						<h4 class="skill-item-title">JavaScript</h4>
+						<p class="text-white-3">
+							List skill/technologies here. You can change the
+							icon above to any of the 1500+ FontAwesome 5 free
+							icons available. Aenean commodo ligula eget dolor.
+						</p>
+					</div>
+					<div class="skill-item">
+						<img
+							class="skill-item-icon"
+							src="/assets/images/icons/react.png"
+							alt="javascript logo"
+						/>
+						<h4 class="skill-item-title">React</h4>
+						<p class="text-white-3">
+							List skill/technologies here. You can change the
+							icon above to any of the 1500+ FontAwesome 5 free
+							icons available. Aenean commodo ligula eget dolor.
+						</p>
+					</div>
+					<div class="skill-item">
+						<img
+							class="skill-item-icon"
+							src="/assets/images/icons/nodejs.png"
+							alt="javascript logo"
+						/>
+						<h4 class="skill-item-title">Node.js</h4>
+						<p class="text-white-3">
+							List skill/technologies here. You can change the
+							icon above to any of the 1500+ FontAwesome 5 free
+							icons available. Aenean commodo ligula eget dolor.
+						</p>
+					</div>
+					<div class="skill-item">
+						<img
+							class="skill-item-icon"
+							src="/assets/images/icons/mongo.png"
+							alt="javascript logo"
+						/>
+						<h4 class="skill-item-title">MongoDB</h4>
+						<p class="text-white-3">
+							List skill/technologies here. You can change the
+							icon above to any of the 1500+ FontAwesome 5 free
+							icons available. Aenean commodo ligula eget dolor.
+						</p>
+					</div>
+				</div>
+			</section>
+
+			<section id="resume">
+				<h3 class="section-title">A summary of My Resume</h3>
+				<div class="education-experience-container">
+					<div class="education-container">
+						<h5 class="education-container-title text-white-2">
+							My Education
+						</h5>
+						<div class="education-details">
+							<div class="education-card">
+								<h5 class="education-card-degree text-white-2">
+									Master in Computer Engineering
+								</h5>
+								<h6 class="education-card-institution">
+									Harvard University / 2015 - 2017
+								</h6>
+								<p class="education-card-description">
+									ist skill/technologies here. You can change
+									the icon above to any of the 1500+
+									FontAwesome 5 free icons available. Aenean
+									commodo ligula eget dolor.
+								</p>
+							</div>
+							<hr />
+							<div class="education-card">
+								<h5 class="education-card-degree text-white-2">
+									Master in Computer Engineering
+								</h5>
+								<h6 class="education-card-institution">
+									Harvard University / 2015 - 2017
+								</h6>
+								<p class="education-card-description">
+									ist skill/technologies here. You can change
+									the icon above to any of the 1500+
+									FontAwesome 5 free icons available. Aenean
+									commodo ligula eget dolor.
+								</p>
+							</div>
+							<hr />
+							<div class="education-card">
+								<h5 class="education-card-degree text-white-2">
+									Master in Computer Engineering
+								</h5>
+								<h6 class="education-card-institution">
+									Harvard University / 2015 - 2017
+								</h6>
+								<p class="education-card-description">
+									ist skill/technologies here. You can change
+									the icon above to any of the 1500+
+									FontAwesome 5 free icons available. Aenean
+									commodo ligula eget dolor.
+								</p>
+							</div>
+						</div>
+					</div>
+					<div class="experience-container">
+						<h5 class="experience-container-title text-white-2">
+							My Experience
+						</h5>
+						<div class="experience-details">
+							<div class="experience-card">
+								<h5
+									class="experience-card-position text-white-2"
+								>
+									Master in Computer Engineering
+								</h5>
+								<h6 class="experience-card-company">
+									Harvard University / 2015 - 2017
+								</h6>
+								<p class="experience-card-description">
+									ist skill/technologies here. You can change
+									the icon above to any of the 1500+
+									FontAwesome 5 free icons available. Aenean
+									commodo ligula eget dolor.
+								</p>
+							</div>
+							<hr />
+							<div class="experience-card">
+								<h5
+									class="experience-card-position text-white-2"
+								>
+									Master in Computer Engineering
+								</h5>
+								<h6 class="experience-card-company">
+									Harvard University / 2015 - 2017
+								</h6>
+								<p class="experience-card-description">
+									ist skill/technologies here. You can change
+									the icon above to any of the 1500+
+									FontAwesome 5 free icons available. Aenean
+									commodo ligula eget dolor.
+								</p>
+							</div>
+							<hr />
+							<div class="experience-card">
+								<h5
+									class="experience-card-position text-white-2"
+								>
+									Master in Computer Engineering
+								</h5>
+								<h6 class="experience-card-company">
+									Harvard University / 2015 - 2017
+								</h6>
+								<p class="experience-card-description">
+									ist skill/technologies here. You can change
+									the icon above to any of the 1500+
+									FontAwesome 5 free icons available. Aenean
+									commodo ligula eget dolor.
+								</p>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="btn-container">
+					<button class="btn-primary">Download CV</button>
+				</div>
+			</section>
 		</main>
+		<footer>
+			<div class="footer-container">
+				<div class="footer-left">
+					<h4 class="footer-left-title">Lets Connect</h4>
+					<p class="footer-left-description text-white-2">
+						Please fill out the form on this section to contact with
+						me or call between 9:00 A.M and 8.00 P.M ET, Monday
+						through Friday.
+					</p>
+					<div class="footer-icons">
+						<a href="facebook.com">
+							<img
+								src="/assets/images/icons/facebook.png"
+								alt="facebook logo" /></a
+						><a href="instagram.com"
+							><img
+								src="/assets/images/icons/insta.png"
+								alt="instagram logo" /></a
+						><a href="twitter.com"
+							><img
+								src="/assets/images/icons/twitter.png"
+								alt="twitter logo"
+						/></a>
+					</div>
+				</div>
+				<div class="footer-right">
+					<h4 class="footer-right-title">Let's Message me</h4>
+					<form class="footer-form">
+						<input type="text" name="name id="name"
+						placeholder="Enter your name">
+						<input
+							type="email"
+							name="email"
+							id="email"
+							placeholder="Enter your email"
+						/>
+						<textarea
+							name="messeage"
+							id="messeage"
+							placeholder="Enter your message"
+							rows="10"
+						></textarea>
+						<button class="btn-primary" type="submit">
+							Submit
+						</button>
+					</form>
+				</div>
+			</div>
+		</footer>
 	</body>
 </html>
