--- a/index.html
+++ b/index.html
@@ -255,9 +255,8 @@
 						</div>
 					</div>
 				</div>
-				<div class="btn-container">
-					<button class="btn-primary">Download CV</button>
-				</div>
+
+				<button class="btn-primary">Download CV</button>
 			</section>
 		</main>
 		<footer>
@@ -270,15 +269,15 @@
 						through Friday.
 					</p>
 					<div class="footer-icons">
-						<a href="facebook.com">
+						<a href="https://facebook.com">
 							<img
 								src="/assets/images/icons/facebook.png"
 								alt="facebook logo" /></a
-						><a href="instagram.com"
+						><a href="https://instagram.com"
 							><img
 								src="/assets/images/icons/insta.png"
 								alt="instagram logo" /></a
-						><a href="twitter.com"
+						><a href="https://twitter.com"
 							><img
 								src="/assets/images/icons/twitter.png"
 								alt="twitter logo"
@@ -308,6 +307,10 @@
 					</form>
 				</div>
 			</div>
+
+			<p class="footer-copyright text-white-3">
+				© Copyright 2022. All Rights Reserved.
+			</p>
 		</footer>
 	</body>
 </html>
